--- a/kubernetes/apps/storage/minio/tenant/ingress.yaml
+++ b/kubernetes/apps/storage/minio/tenant/ingress.yaml
@@ -11,8 +11,9 @@ metadata:
       client_max_body_size 0;
     nginx.ingress.kubernetes.io/configuration-snippet: |
       chunked_transfer_encoding off;
+    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
 spec:
-  ingressClassName: internal
+  ingressClassName: external
   rules:
   - host: "minio.${SECRET_DOMAIN}"
     http:
