--- a/kubernetes/apps/storage/minio/tenant/ingress.yaml
+++ b/kubernetes/apps/storage/minio/tenant/ingress.yaml
@@ -43,8 +43,9 @@ metadata:
       client_max_body_size 0;
     nginx.ingress.kubernetes.io/configuration-snippet: |
       chunked_transfer_encoding off;
+    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
 spec:
-  ingressClassName: internal
+  ingressClassName: external
   rules:
   - host: "s3.${SECRET_DOMAIN}"
     http:
@@ -75,8 +76,9 @@ metadata:
       client_max_body_size 0;
     nginx.ingress.kubernetes.io/configuration-snippet: |
       chunked_transfer_encoding off;
+    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
 spec:
-  ingressClassName: internal
+  ingressClassName: external
   rules:
   - host: "*.s3.${SECRET_DOMAIN}"
     http:
