--- a/kubernetes/apps/storage/minio/tenant/ingress.yaml
+++ b/kubernetes/apps/storage/minio/tenant/ingress.yaml
@@ -11,9 +11,9 @@ metadata:
       client_max_body_size 0;
     nginx.ingress.kubernetes.io/configuration-snippet: |
       chunked_transfer_encoding off;
-    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
+    # external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
 spec:
-  ingressClassName: external
+  ingressClassName: internal
   rules:
   - host: "minio.${SECRET_DOMAIN}"
     http:
@@ -43,9 +43,9 @@ metadata:
       client_max_body_size 0;
     nginx.ingress.kubernetes.io/configuration-snippet: |
       chunked_transfer_encoding off;
-    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
+    # external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
 spec:
-  ingressClassName: external
+  ingressClassName: internal
   rules:
   - host: "s3.${SECRET_DOMAIN}"
     http:
@@ -76,9 +76,9 @@ metadata:
       client_max_body_size 0;
     nginx.ingress.kubernetes.io/configuration-snippet: |
       chunked_transfer_encoding off;
-    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
+    # external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
 spec:
-  ingressClassName: external
+  ingressClassName: internal
   rules:
   - host: "*.s3.${SECRET_DOMAIN}"
     http:
