--- a/kubernetes/apps/home/frigate/app/helmrelease.yaml
+++ b/kubernetes/apps/home/frigate/app/helmrelease.yaml
@@ -39,10 +39,11 @@ spec:
           main:
             image:
               repository: ghcr.io/blakeblackshear/frigate
-              tag: 0.13.1@sha256:ee3cd964f19f3b7aa48cc512423c4378478dd97214f66b16741ac3c1d799d407
+              tag: stable-tensorrt
+              # tag: 0.13.1@sha256:ee3cd964f19f3b7aa48cc512423c4378478dd97214f66b16741ac3c1d799d407
             env:
               TZ: Europe/Simferopol
-              LIBVA_DRIVER_NAME: radeonsi
+              # LIBVA_DRIVER_NAME: radeonsi
             envFrom:
               - secretRef:
                   name: frigate-secret
