--- a/kubernetes/apps/home/frigate/app/helmrelease.yaml
+++ b/kubernetes/apps/home/frigate/app/helmrelease.yaml
@@ -69,6 +69,7 @@ spec:
                 cpu: 100m
               limits:
                 # gpu.intel.com/i915: "1"
+                nvidia.com/gpu: 1
                 memory: 8Gi
         # pod:
         #   affinity:
@@ -136,13 +137,13 @@ spec:
       #   hostPathType: Directory
       #   globalMounts:
       #     - path: /dev/bus/usb
-      dri:
-        enabled: true
-        type: hostPath
-        hostPath: /dev/dri
-        hostPathType: Directory
-        globalMounts:
-          - path: /dev/dri
+      # dri:
+      #   enabled: true
+      #   type: hostPath
+      #   hostPath: /dev/dri
+      #   hostPathType: Directory
+      #   globalMounts:
+      #     - path: /dev/dri
       suv:
         existingClaim: suv-storage
         globalMounts:
