--- a/kubernetes/apps/home/frigate/app/resources/config.yml
+++ b/kubernetes/apps/home/frigate/app/resources/config.yml
@@ -37,7 +37,7 @@ mqtt:
 detectors:
   tensorrt:
     type: tensorrt
-    # device: 0
+    device: 0
   # Required: name of the detector
   # cpu_detector:
     # Required: type of the detector
@@ -46,6 +46,12 @@ detectors:
     # Detectors may require additional configuration.
     # Refer to the Detectors configuration page for more information.
     # type: cpu
+model:
+  path: /config/model_cache/tensorrt/yolov7-640.trt
+  input_tensor: nchw
+  input_pixel_format: rgb
+  width: 640
+  height: 640
 
 # Optional: Database configuration
 database:
