--- a/kubernetes/apps/home/kustomization.yaml
+++ b/kubernetes/apps/home/kustomization.yaml
@@ -6,6 +6,6 @@ resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
   # Flux-Kustomizations
-  # - ./frigate/ks.yaml
+  - ./frigate/ks.yaml
   - ./mosquitto/ks.yaml
   - ./home-assistant/ks.yaml
