--- a/kubernetes/apps/home/frigate/app/helmrelease.yaml
+++ b/kubernetes/apps/home/frigate/app/helmrelease.yaml
@@ -42,7 +42,7 @@ spec:
           main:
             image:
               repository: ghcr.io/blakeblackshear/frigate
-              tag: stable-tensorrt
+              tag: stable-tensorrt@sha256:2068baac8d8b9a29a97483d0ab603b024fe606ec7d555b70da5a024fbeab12e3
               # tag: 0.13.1@sha256:ee3cd964f19f3b7aa48cc512423c4378478dd97214f66b16741ac3c1d799d407
             env:
               TZ: Europe/Simferopol
