--- a/kubernetes/apps/home/frigate/app/resources/config.yml
+++ b/kubernetes/apps/home/frigate/app/resources/config.yml
@@ -46,12 +46,12 @@ detectors:
     # Detectors may require additional configuration.
     # Refer to the Detectors configuration page for more information.
     # type: cpu
-# model:
-#   path: /config/model_cache/tensorrt/yolov7-320.trt
-#   input_tensor: nchw
-#   input_pixel_format: rgb
-#   width: 320
-#   height: 320
+model:
+  path: /config/model_cache/tensorrt/yolov7-320.trt
+  input_tensor: nchw
+  input_pixel_format: rgb
+  width: 320
+  height: 320
 
 # Optional: Database configuration
 database:
