--- a/kubernetes/apps/home/frigate/app/helmrelease.yaml
+++ b/kubernetes/apps/home/frigate/app/helmrelease.yaml
@@ -50,21 +50,21 @@ spec:
             envFrom:
               - secretRef:
                   name: frigate-secret
-            # probes:
-            #   liveness: &probes
-            #     enabled: true
-            #     custom: true
-            #     spec:
-            #       httpGet:
-            #         path: /api/version
-            #         port: &port 5000
-            #       initialDelaySeconds: 10
-            #       periodSeconds: 20
-            #       timeoutSeconds: 2
-            #       failureThreshold: 5
-            #   readiness: *probes
-            #   startup:
-            #     enabled: false
+            probes:
+              liveness: &probes
+                enabled: true
+                custom: true
+                spec:
+                  httpGet:
+                    path: /api/version
+                    port: &port 5000
+                  initialDelaySeconds: 0
+                  periodSeconds: 10
+                  timeoutSeconds: 1
+                  failureThreshold: 3
+              readiness: *probes
+              startup:
+                enabled: false
             securityContext:
               privileged: true
             resources:
@@ -93,7 +93,7 @@ spec:
           io.cilium/lb-ipam-ips: 192.168.108.55
         ports:
           http:
-            port: 5000
+            port: *port
           rtsp:
             port: 8554
           webrtc:
@@ -124,7 +124,7 @@ spec:
         globalMounts:
           - path: /config/config.yml
             subPath: config.yml
-            readOnly: true
+            readOnly: false
       cache:
         enabled: true
         type: emptyDir
