--- a/kubernetes/apps/ai/deepstack/ks.yaml
+++ b/kubernetes/apps/ai/deepstack/ks.yaml
@@ -10,7 +10,7 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: flux-system
+    name: home-kubernetes
   dependsOn:
     - name: longhorn
   interval: 30m
