--- a/kubernetes/apps/ai/deepstack/ks.yaml
+++ b/kubernetes/apps/ai/deepstack/ks.yaml
@@ -3,10 +3,10 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: home-deepstack
+  name: deepstack
   namespace: flux-system
 spec:
-  path: ./kubernetes/main/apps/ai/deepstack/app
+  path: ./kubernetes/apps/ai/deepstack/app
   prune: true
   sourceRef:
     kind: GitRepository
