Fix ds namespace

--- a/kubernetes/apps/ai/deepstack/ks.yaml
+++ b/kubernetes/apps/ai/deepstack/ks.yaml
@@ -6,6 +6,7 @@ metadata:
   name: deepstack
   namespace: flux-system
 spec:
+  targetNamespace: ai
   path: ./kubernetes/apps/ai/deepstack/app
   prune: true
   sourceRef:
