--- a/kubernetes/apps/ai/deepstack/app/pvc.yaml
+++ b/kubernetes/apps/ai/deepstack/app/pvc.yaml
@@ -3,18 +3,12 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: deepstack-config-pvc
-  labels:
-    type: longhorn
 spec:
-  accessModes:
-    - ReadWriteOnce
-  volumeMode: Filesystem
+  accessModes: ["ReadWriteOnce"]
   resources:
     requests:
       storage: 2Gi
-  volumeName: deepstack-config-pv
   storageClassName: longhorn-fast
-
 # ---
 # apiVersion: v1
 # kind: PersistentVolume
