Fix ds pvc name

--- a/kubernetes/apps/ai/deepstack/app/helmrelease.yaml
+++ b/kubernetes/apps/ai/deepstack/app/helmrelease.yaml
@@ -97,5 +97,5 @@ spec:
     persistence:
       config:
         enabled: true
-        existingClaim: deepstack-config-pvc
+        existingClaim: deepstack-config
         mountPath: /datastore
