--- a/kubernetes/apps/ai/deepstack/app/pvc.yaml
+++ b/kubernetes/apps/ai/deepstack/app/pvc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: deepstack-config-pvc
+  name: deepstack-config
 spec:
   accessModes: ["ReadWriteOnce"]
   resources:
