--- a/kubernetes/apps/ai/deepstack/app/helmrelease.yaml
+++ b/kubernetes/apps/ai/deepstack/app/helmrelease.yaml
@@ -98,4 +98,5 @@ spec:
       config:
         enabled: true
         existingClaim: deepstack-config
-        mountPath: /datastore
+        globalMounts:
+          - path: /datastore
