--- a/kubernetes/apps/home/frigate/app/pvc.yaml
+++ b/kubernetes/apps/home/frigate/app/pvc.yaml
@@ -13,6 +13,17 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
+  name: frigate-model-cache
+spec:
+  accessModes: ["ReadWriteOnce"]
+  resources:
+    requests:
+      storage: 3Gi
+  storageClassName: longhorn-fast
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
   name: suv-storage
 spec:
   accessModes: ["ReadWriteOnce"]
