--- a/kubernetes/apps/home/frigate/app/helmrelease.yaml
+++ b/kubernetes/apps/home/frigate/app/helmrelease.yaml
@@ -46,6 +46,7 @@ spec:
               # tag: stable
             env:
               TZ: Europe/Simferopol
+              YOLO_MODELS: yolov7x-640
               # LIBVA_DRIVER_NAME: radeonsi
             envFrom:
               - secretRef:
@@ -58,7 +59,7 @@ spec:
                   httpGet:
                     path: /api/version
                     port: &port 5000
-                  initialDelaySeconds: 0
+                  initialDelaySeconds: 380
                   periodSeconds: 10
                   timeoutSeconds: 1
                   failureThreshold: 3
