--- a/kubernetes/apps/home/frigate/app/resources/config.yml
+++ b/kubernetes/apps/home/frigate/app/resources/config.yml
@@ -47,11 +47,11 @@ detectors:
     # Refer to the Detectors configuration page for more information.
     # type: cpu
 model:
-  path: /config/model_cache/tensorrt/yolov7-320.trt
+  path: /config/model_cache/tensorrt/yolov7x-640.trt
   input_tensor: nchw
-  input_pixel_format: rgb
-  width: 320
-  height: 320
+  input_pixel_format: yuv
+  width: 640
+  height: 360
 
 # Optional: Database configuration
 database:
