--- a/kubernetes/apps/home/frigate/app/pvc.yaml
+++ b/kubernetes/apps/home/frigate/app/pvc.yaml
@@ -32,4 +32,4 @@ spec:
     requests:
       storage: 250Gi
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: longhorn-fast
+  # storageClassName: longhorn-fast
