--- a/kubernetes/apps/argocd/flamingo/app/helmrelease.yaml
+++ b/kubernetes/apps/argocd/flamingo/app/helmrelease.yaml
@@ -3,7 +3,6 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
   name: flamingo
-  namespace: argocd
 spec:
   interval: 10m
   targetNamespace: argocd
@@ -14,6 +13,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: argo-helm-repo
+        namespace: flux-system
   values:
     global:
       image:
