--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -43,6 +43,7 @@ stringData:
     SMTP_RELAY_PASSWORD: ENC[AES256_GCM,data:xGzekLo8+RP/YKCH/HbUO4Nhl7qyCMFUICohMqXZN1Z6F28j,iv:krjA6mLotbh0a7dYGXyg/d62NNBvoLPUSnqYnK5wHIU=,tag:iMyNBq/iyhFhco+ppbuuOA==,type:str]
     MOSQUITTO_MQTT_USERNAME: ENC[AES256_GCM,data:ZjLYGtn8nZ4=,iv:rakFZM0SDdVSGeCKwrMk+XTJn0Tm2fy58Ce/MuJwmzY=,tag:CCYk4S9A0xFviDHbrgLnQw==,type:str]
     MOSQUITTO_MQTT_PASSWORD: ENC[AES256_GCM,data:90pu/ZiV9CfcMA==,iv:Xutd2jzZBHWuRE9U8Fh1vOhaQv3ZE/4VgYg4R8NTFUA=,tag:mMqbF0/DoKNMsbKlQ/wdKQ==,type:str]
+    ARGOCD_ADMIN_PASSWORD: ENC[AES256_GCM,data:DEpNeAvsBa0KMA==,iv:h9Bw9cBAv/sVfKjWrXf0tZcBPtZTAajI41YRBtRXac8=,tag:dypXvKPHdeNtfkFtra7zSQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -58,8 +59,8 @@ sops:
             QmxYU2FYZ0N2Z29lMTdhZnQyNU9jSUEKyG1YlQGZAqOI2namyYVUzFoW+7O9s5CL
             x/cy3nNdaILNiZtBPL9Zq6qvJSvQ0l+DCiGwEjBosA35m27eVooacw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-02-15T17:48:19Z"
-    mac: ENC[AES256_GCM,data:zemA3lQfVya8M+G2TfUBVyH/mtrDSLlry+TAzCBNjHVCw45TnJBWJH8ujb4ZXYH/vvBRgENXmGSCOFYnq5FJKJhUkRsNFJgLXNVnyfPZ3VX1xadYerhN/Sl6zn6roChdcxilfTMPbHkR5dfF/ucdMi5aZ07O7V+2zu++2Wzi0Uo=,iv:HbtqAApXt8FjrS1Fc/Lu8oXbFIX35uv8AMOvqkgjaUc=,tag:YyVYn5fSfbvvl8k7T0AR5w==,type:str]
+    lastmodified: "2024-02-29T20:39:35Z"
+    mac: ENC[AES256_GCM,data:Lva1+P1Ew+KOyEwwA5crtHTRP7OdPsqbnQ3cZW4y65LLR1EDWr+tD/LSdnYLBdDURtaBIAqN+8eqHs9inoXvpZwHv/uPXO5mN4bfFj7mEfjUY+wpdgqnQfp6pnUHNZPh58zymU0zdQ4IIBXvbwwVfuV6TfY5/USUszId7XRGSgU=,iv:QmRwv20WlgU1g/NE8CeUaKe6OyiOkXj6LfobPPxAlNE=,tag:zaPPSbAwcI1hVfz7q3fvYw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
