--- a/kubernetes/apps/argocd/flamingo/app/helmrelease.yaml
+++ b/kubernetes/apps/argocd/flamingo/app/helmrelease.yaml
@@ -16,7 +16,7 @@ spec:
         namespace: flux-system
   values:
     global:
-      domain: argocd.${SECRET_DOMAIN}
+      domain: &host flamingo.${SECRET_DOMAIN}
       image:
         repository: ghcr.io/flux-subsystem-argo/fsa/argocd
         tag: v2.9.6-fl.23-main-86c4bdb9
@@ -39,10 +39,10 @@ spec:
         annotations:
           nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
           nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
-        hostname: "argocd.${SECRET_DOMAIN}"
+        hostname: *host
         path: /
         pathType: Prefix
         extraTls:
           - hosts:
-            - argocd.${SECRET_DOMAIN}
-            secretName: argocd-tls
+            - *host
+            secretName: flamingo-tls
