--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -25,7 +25,7 @@ stringData:
     RADARR_PUSHOVER_TOKEN: ENC[AES256_GCM,data:FSi7d9wA79qU/5yJciwg4OBK4/Ao9Lu8UwFbUBV3,iv:1H/Q7wldS8ZuA8VbDnC0y6Yb4LnAKXfQVU3AKUogM/4=,tag:kSvlvorY3U0h3VaGfI9cpg==,type:str]
     GRAFANA_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:USKIMaJ+Uy9oMVWkuOeKcdTKEHBTbgjl7rFthpWO8ndBp989bb61p9xvu+4azw9TpdjXC//tyzdbUTwX3FA0Vg==,iv:6PmB6GTKIzoIvGct5KBGR6ae56T0ExJAXU9ss0hKxYo=,tag:cPGjqaLz+59q5Y5IBKdIjg==,type:str]
     LLDAP_JWT_SECRET: ENC[AES256_GCM,data:2iMzPjCcQ+iwwBHGotho1ENlZRoyEUbJqPN5tIMw1kE=,iv:eiRdn5YVHqzjD/+qjfI4DNHikQTS+OKlI/lMUURavD4=,tag:rwkPgLlWoqmEAuuRtcGd4g==,type:str]
-    LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:0V5kCe+KchkU+oGsdv75Tc8RM2I=,iv:PD02wem8Y4qmkMtkmwZASxXnVSygPM0TRwdTG2zPONE=,tag:I4wy6WNoRdgi3uf0/AsMqg==,type:str]
+    LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:QPvx1VFWsU3aBw==,iv:V3l//8qRHZN/6hwZCmxza7Rc5zhAGxqJTRVatKdbBUs=,tag:sk8iDJNxZdttFCYEqyLMeQ==,type:str]
     LLDAP_USER_DN: ENC[AES256_GCM,data:/22HjtE=,iv:QZgNS7hqHK8cqUuXcZ9KJRQpe5hqvrymYd6g5GFqDUU=,tag:sWuvH66A/7KLGs39vpKtTQ==,type:str]
     LLDAP_LDAP_USER_EMAIL: ENC[AES256_GCM,data:CarfS0o6oKOelCExapbPdAw=,iv:T9h27I/zsztSnndy/+q7iJleZJOQB1HdEmboB1iEMlY=,tag:7Ld/x0rvbybuOaLdTUlC2A==,type:str]
     LLDAP_SERVER_KEY_SEED: ENC[AES256_GCM,data:3Yx5YIgAJPVbMwajKX8HtiBp6kqNqAGa/awDUd/XZjLgbeS0J7s7rbHMNRLGcI/OkcMStj2P+Q==,iv:NDSgB7Sn2gXUU2zxZSCp5VIBcygrIOU+IvqzQUMdDss=,tag:AVAoAFGxx+EtNH5pvE3Icw==,type:str]
@@ -59,8 +59,8 @@ sops:
             QmxYU2FYZ0N2Z29lMTdhZnQyNU9jSUEKyG1YlQGZAqOI2namyYVUzFoW+7O9s5CL
             x/cy3nNdaILNiZtBPL9Zq6qvJSvQ0l+DCiGwEjBosA35m27eVooacw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-02-29T20:39:35Z"
-    mac: ENC[AES256_GCM,data:Lva1+P1Ew+KOyEwwA5crtHTRP7OdPsqbnQ3cZW4y65LLR1EDWr+tD/LSdnYLBdDURtaBIAqN+8eqHs9inoXvpZwHv/uPXO5mN4bfFj7mEfjUY+wpdgqnQfp6pnUHNZPh58zymU0zdQ4IIBXvbwwVfuV6TfY5/USUszId7XRGSgU=,iv:QmRwv20WlgU1g/NE8CeUaKe6OyiOkXj6LfobPPxAlNE=,tag:zaPPSbAwcI1hVfz7q3fvYw==,type:str]
+    lastmodified: "2024-02-29T22:24:03Z"
+    mac: ENC[AES256_GCM,data:x1QnHjMxtp6B2Y12GENmlw18ohR0MjRoFHxaoQX3Hylb0MWOBcnLLJv8HnipDflRx+Jkc0o0KxlhbP8jBD8XJ1yoczd8IELC6lOYJJFntMx0bxFMh5i8KIj+iUxfoLlnX2e1oBdMi7wIsamWdPeAOS2SvViWWuMhcH+UqgkUbgo=,iv:MbysQB142ZEg1e2EDNxDIzAQAU0fp4nOkN5dY/vtiD8=,tag:kWahhZz7D+YIjL/f868Vag==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
