--- a/kubernetes/apps/observability/kustomization.yaml
+++ b/kubernetes/apps/observability/kustomization.yaml
@@ -12,5 +12,5 @@ resources:
   - ./loki/ks.yaml
   - ./smartctl-exporter/ks.yaml
   - ./thanos/ks.yaml
-  - ./unpoller/ks.yaml
+  # - ./unpoller/ks.yaml
   - ./vector/ks.yaml
