--- a/kubernetes/apps/media/jellyfin/ks.yaml
+++ b/kubernetes/apps/media/jellyfin/ks.yaml
@@ -4,7 +4,7 @@ metadata:
   name: &app jellyfin
   namespace: flux-system
 spec:
-  argetNamespace: media
+  targetNamespace: media
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
