--- a/kubernetes/apps/media/jellyfin/app/pvc.yaml
+++ b/kubernetes/apps/media/jellyfin/app/pvc.yaml
@@ -7,6 +7,6 @@ spec:
   accessModes: ["ReadWriteOnce"]
   resources:
     requests:
-      storage: 256Mi
+      storage: 1Gi
   persistentVolumeReclaimPolicy: Retain
   storageClassName: longhorn-fast
