--- a/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
+++ b/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
@@ -44,8 +44,8 @@ spec:
               tag: 10.8.11
             env:
               DOTNET_SYSTEM_IO_DISABLEFILELOCKING: "true"
-              JELLYFIN_FFmpeg__probesize: 50000000
-              JELLYFIN_FFmpeg__analyzeduration: 500000000
+              JELLYFIN_FFmpeg__probesize: 1G
+              JELLYFIN_FFmpeg__analyzeduration: 200M
             resources:
               requests:
                 memory: 9248M
@@ -68,13 +68,7 @@ spec:
         annotations:
           external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
         hosts:
-          - host: &host1 dh.${SECRET_DOMAIN}
-            paths:
-              - path: /jellyfin/
-                service:
-                  name: main
-                  port: http
-          - host: &host2 jelly.${SECRET_DOMAIN}
+          - host: &host1 jelly.${SECRET_DOMAIN}
             paths:
               - path: /
                 service:
@@ -83,7 +77,6 @@ spec:
         tls:
           - hosts:
               - *host1
-              - *host2
 
     persistence:
       config:
@@ -94,7 +87,3 @@ spec:
         existingClaim: media-storage
         globalMounts:
           - path: /media
-      transcode:
-        type: emptyDir
-        globalMounts:
-          - path: /transcode
