--- a/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
+++ b/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
@@ -80,6 +80,7 @@ spec:
 
     persistence:
       config:
+        enabled: true
         existingClaim: jellyfin-config
         globalMounts:
           - path: /config
