--- a/kubernetes/apps/ai/llama-gpt/app/llama-gpt-api-deployment.yaml
+++ b/kubernetes/apps/ai/llama-gpt/app/llama-gpt-api-deployment.yaml
@@ -25,5 +25,6 @@ spec:
                   key: DEFAULT_MODEL
           resources:
             requests:
+              nvidia.com/gpu: 1
               memory: 5Gi
       restartPolicy: Always
