--- a/kubernetes/apps/ai/llama-gpt/app/llama-gpt-api-deployment.yaml
+++ b/kubernetes/apps/ai/llama-gpt/app/llama-gpt-api-deployment.yaml
@@ -26,6 +26,7 @@ spec:
                   key: DEFAULT_MODEL
           resources:
             requests:
+              memory: 15Gi
+            limits:
               nvidia.com/gpu: 1
-              memory: 5Gi
       restartPolicy: Always
