--- a/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
+++ b/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
@@ -55,6 +55,8 @@ spec:
 
     service:
       main:
+        annotations:
+          io.cilium/lb-ipam-ips: 192.168.108.77
         type: LoadBalancer
         externalTrafficPolicy: Cluster
         ports:
