--- a/kubernetes/apps/ai/ollama/backend/helmrelease.yaml
+++ b/kubernetes/apps/ai/ollama/backend/helmrelease.yaml
@@ -76,3 +76,8 @@ spec:
           - hosts:
               - *host
             secretName: wildcard-cert-tls
+    persistence:
+      config:
+        enabled: true
+        existingClaim: pvc-ollama
+        mountPath: /root/.ollama
