--- a/kubernetes/apps/ai/ollama/ui/helmrelease.yaml
+++ b/kubernetes/apps/ai/ollama/ui/helmrelease.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
-  name: &app ollama-ui
+  name: &app open-webui
   namespace: default
 spec:
   interval: 30m
@@ -65,3 +65,8 @@ spec:
           - hosts:
               - *host
             secretName: wildcard-cert-tls
+    persistence:
+      config:
+        enabled: true
+        existingClaim: pvc-ollama-ui
+        mountPath: /app/backend/data
