--- a/kubernetes/apps/ai/ollama/ui/helmrelease.yaml
+++ b/kubernetes/apps/ai/ollama/ui/helmrelease.yaml
@@ -66,7 +66,7 @@ spec:
               - *host
             secretName: wildcard-cert-tls
     persistence:
-      config:
+      uidata:
         enabled: true
         existingClaim: pvc-ollama-ui
         mountPath: /app/backend/data
