--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -44,6 +44,7 @@ stringData:
     MOSQUITTO_MQTT_USERNAME: ENC[AES256_GCM,data:ZjLYGtn8nZ4=,iv:rakFZM0SDdVSGeCKwrMk+XTJn0Tm2fy58Ce/MuJwmzY=,tag:CCYk4S9A0xFviDHbrgLnQw==,type:str]
     MOSQUITTO_MQTT_PASSWORD: ENC[AES256_GCM,data:90pu/ZiV9CfcMA==,iv:Xutd2jzZBHWuRE9U8Fh1vOhaQv3ZE/4VgYg4R8NTFUA=,tag:mMqbF0/DoKNMsbKlQ/wdKQ==,type:str]
     ARGOCD_ADMIN_PASSWORD: ENC[AES256_GCM,data:DEpNeAvsBa0KMA==,iv:h9Bw9cBAv/sVfKjWrXf0tZcBPtZTAajI41YRBtRXac8=,tag:dypXvKPHdeNtfkFtra7zSQ==,type:str]
+    GITHUB_TOKEN: ENC[AES256_GCM,data:3xzijhXNrHSEwH7MmHREYwtYIB1MBQn2QiY2DuQCAvuCLQSYF0stNw==,iv:WLxQ3zv4lSvcMjcDxuKSNCc+k05Olr5hJEiWv0SUBYA=,tag:Qu10jiP1s3wNB9bdeGz6jw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -59,8 +60,8 @@ sops:
             QmxYU2FYZ0N2Z29lMTdhZnQyNU9jSUEKyG1YlQGZAqOI2namyYVUzFoW+7O9s5CL
             x/cy3nNdaILNiZtBPL9Zq6qvJSvQ0l+DCiGwEjBosA35m27eVooacw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-02-29T22:24:03Z"
-    mac: ENC[AES256_GCM,data:x1QnHjMxtp6B2Y12GENmlw18ohR0MjRoFHxaoQX3Hylb0MWOBcnLLJv8HnipDflRx+Jkc0o0KxlhbP8jBD8XJ1yoczd8IELC6lOYJJFntMx0bxFMh5i8KIj+iUxfoLlnX2e1oBdMi7wIsamWdPeAOS2SvViWWuMhcH+UqgkUbgo=,iv:MbysQB142ZEg1e2EDNxDIzAQAU0fp4nOkN5dY/vtiD8=,tag:kWahhZz7D+YIjL/f868Vag==,type:str]
+    lastmodified: "2024-03-03T21:59:06Z"
+    mac: ENC[AES256_GCM,data:JxZZLRmM1HzTBhrFAm0CohvQcAFL6afIs3lTBDFrQ7N6abmWD/qn83mu6BAMtdL58+/l0zgWz8wJ4YeSx200CoOtpjAqaFZ48/UMBdIx/P3FyaaZGTYf3xiHrdn8glSAFg0Z7Jnesw3Tp2RoWXoVkNE9UgfF1BxnBHvwgLntXxc=,iv:W+/J4da1Rh9Ip+LnezMtkHRJkwNxjVF2dx2EyAdURWM=,tag:NtxJ2Kzo1OpTNJPwiDrwuA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
