--- a/kubernetes/apps/kube-system/kustomization.yaml
+++ b/kubernetes/apps/kube-system/kustomization.yaml
@@ -10,4 +10,4 @@ resources:
   - ./node-feature-discovery/ks.yaml
   # - ./intel-device-plugin/ks.yaml
   - ./nvidia-gpu-operator/ks.yaml
-  - ./renovate/ks.yaml
+  # - ./renovate/ks.yaml
