--- a/.github/workflows/lychee.yaml
+++ b/.github/workflows/lychee.yaml
@@ -26,7 +26,7 @@ jobs:
         uses: lycheeverse/lychee-action@v1
         id: lychee
         with:
-          token: "${{ secrets.GITHUB_TOKEN }}"
+          token: "${{ secrets.CUSTOM_GITHUB_TOKEN }}"
           args: --verbose --no-progress --exclude-mail './**/*.md'
           output: "${{ env.LYCHEE_OUTPUT }}"
           debug: true
@@ -35,7 +35,7 @@ jobs:
         id: find-issue
         shell: bash
         env:
-          GH_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          GH_TOKEN: "${{ secrets.CUSTOM_GITHUB_TOKEN }}"
         run: |
           issue_number=$( \
               gh issue list \
@@ -50,7 +50,7 @@ jobs:
       - name: Create or Update Issue
         uses: peter-evans/create-issue-from-file@v5
         with:
-          token: "${{ secrets.GITHUB_TOKEN }}"
+          token: "${{ secrets.CUSTOM_GITHUB_TOKEN }}"
           title: "${{ env.WORKFLOW_ISSUE_TITLE }}"
           issue-number: "${{ steps.find-issue.outputs.issue-number || '' }}"
           content-filepath: "${{ env.LYCHEE_OUTPUT }}"
