--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -45,6 +45,9 @@ stringData:
     MOSQUITTO_MQTT_PASSWORD: ENC[AES256_GCM,data:90pu/ZiV9CfcMA==,iv:Xutd2jzZBHWuRE9U8Fh1vOhaQv3ZE/4VgYg4R8NTFUA=,tag:mMqbF0/DoKNMsbKlQ/wdKQ==,type:str]
     ARGOCD_ADMIN_PASSWORD: ENC[AES256_GCM,data:DEpNeAvsBa0KMA==,iv:h9Bw9cBAv/sVfKjWrXf0tZcBPtZTAajI41YRBtRXac8=,tag:dypXvKPHdeNtfkFtra7zSQ==,type:str]
     GITHUB_TOKEN: ENC[AES256_GCM,data:C3WUuAAv3rn4F79VLX7i9tE9L9cGKjX+gqwfZYKpfkmdjb08oHNPTw==,iv:FBKCEK46VEgD9YNLITnE0kmjAyN9NMH9by7M8lLyR9M=,tag:o7ti0Vaz30CsaLggI9n7rg==,type:str]
+    TG_BOT_TOKEN: ENC[AES256_GCM,data:9+Gg/nxrEVGP3NR5ogX8uMsZ44kKjBYQaPtHyDx1nOrhfHkCuWGKuddp8RnE,iv:Y5Q4vZwk3nH/uVI8PoezyWDNUN9X9bb1JfhFIDMGBM4=,tag:/KliLTtPKvTF4lt6ZDCzHQ==,type:str]
+    TG_BOT_ADMIN_IDS: ENC[AES256_GCM,data:gWfHLaizDdp3,iv:GKYdizgC/bvtXMrtkqyjD2JTeTC3ZIJlV0HeeEQ5vBU=,tag:WZWwv0hV6yyHbOyfPeYsIA==,type:int]
+    TG_BOT_USER_IDS: ENC[AES256_GCM,data:8ndgTPFsX8Ps,iv:NgLI/MhbIVR7dKL1zhLNnAYNhdAgs+A6HrB6u8Ng9HM=,tag:kET2yQCyaIhuHS/XtUWLgQ==,type:int]
 sops:
     kms: []
     gcp_kms: []
@@ -60,8 +63,8 @@ sops:
             QmxYU2FYZ0N2Z29lMTdhZnQyNU9jSUEKyG1YlQGZAqOI2namyYVUzFoW+7O9s5CL
             x/cy3nNdaILNiZtBPL9Zq6qvJSvQ0l+DCiGwEjBosA35m27eVooacw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-03-03T22:23:00Z"
-    mac: ENC[AES256_GCM,data:GSS3+wsEgIYchE4hahHS2Au9cVX7lsFLAMtL869bv5k3ZqLmqHQki/HG8L6P+zKdbTu8Vi/eNlfotjyIOXNStPQLqFvt1ckudLqGwzXpx93HeCPAJ/h7AxSdTkBvRCNYq+yw96DOlPPtBDrNTgxv3DeYKraZqx6+rW+eqXwYWRc=,iv:BLzV+Xbb/8hrolww2BOhtqjnJmBjH9ajvHXSWvKX/Xo=,tag:VJlYAQDWAYuumWOGjVKnMw==,type:str]
+    lastmodified: "2024-03-04T19:49:09Z"
+    mac: ENC[AES256_GCM,data:CPCV/Wt4V2noN4i9sGE/k+SlMg3GK6ENDDGZLx1d8a4y4Whw3MNchQ3542deFfyDLAzlz8ke+oY4cYcZ66rBk7pZ49ltjMZVQAyPyh9jiD2yUYwEgLcUAVtwREHjSZjqyuLLwX/T08iQOcsrNR3T1chyC+dd4iuOkgrHCdrZRX0=,iv:jlmfIGzQ8szV09guBi3nalU+vPh7BPj0IO6ZEAq0n0M=,tag:mEEOhx1Q81hybNWREOjNsQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
