--- a/kubernetes/apps/ai/ollama/backend/helmrelease.yaml
+++ b/kubernetes/apps/ai/ollama/backend/helmrelease.yaml
@@ -54,6 +54,40 @@ spec:
                 nvidia.com/gpu: 1
               startup:
                 enabled: false
+      bot:
+        type: deployment
+        updateStrategy: Recreate
+        annotations:
+          reloader.stakater.com/auto: "true"
+        containers:
+          main:
+            image:
+              repository: ruecat/ollama-telegram
+              tag: latest
+            env:
+              TZ: Europe/Simferopol
+              TOKEN:
+                valueFrom:
+                  secretKeyRef:
+                    name: ollama-secret
+                    key: TG_BOT_TOKEN
+              ADMIN_IDS:
+                valueFrom:
+                  secretKeyRef:
+                    name: ollama-secret
+                    key: TG_ADMIN_IDS
+              USER_IDS:
+                valueFrom:
+                  secretKeyRef:
+                    name: ollama-secret
+                    key: TG_USER_IDS
+              OLLAMA_BASE_URL: http://ollama.ai.svc:11434/api
+            resources:
+              requests:
+                cpu: 200m
+                memory: 256Mi
+              limits:
+                memory: 4Gi
     service:
       main:
         ports:
