--- a/kubernetes/apps/ai/ollama/backend/secret.sops.yaml
+++ b/kubernetes/apps/ai/ollama/backend/secret.sops.yaml
@@ -5,4 +5,4 @@ metadata:
 stringData:
     TG_BOT_TOKEN: ${TG_BOT_TOKEN}
     TG_ADMIN_IDS: ${TG_BOT_ADMIN_IDS}
-    TG_USER_ID: ${TG_BOT_USER_IDS}
+    TG_USER_IDS: ${TG_BOT_USER_IDS}
