--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -46,8 +46,8 @@ stringData:
     ARGOCD_ADMIN_PASSWORD: ENC[AES256_GCM,data:DEpNeAvsBa0KMA==,iv:h9Bw9cBAv/sVfKjWrXf0tZcBPtZTAajI41YRBtRXac8=,tag:dypXvKPHdeNtfkFtra7zSQ==,type:str]
     GITHUB_TOKEN: ENC[AES256_GCM,data:C3WUuAAv3rn4F79VLX7i9tE9L9cGKjX+gqwfZYKpfkmdjb08oHNPTw==,iv:FBKCEK46VEgD9YNLITnE0kmjAyN9NMH9by7M8lLyR9M=,tag:o7ti0Vaz30CsaLggI9n7rg==,type:str]
     TG_BOT_TOKEN: ENC[AES256_GCM,data:9+Gg/nxrEVGP3NR5ogX8uMsZ44kKjBYQaPtHyDx1nOrhfHkCuWGKuddp8RnE,iv:Y5Q4vZwk3nH/uVI8PoezyWDNUN9X9bb1JfhFIDMGBM4=,tag:/KliLTtPKvTF4lt6ZDCzHQ==,type:str]
-    TG_BOT_ADMIN_IDS: ENC[AES256_GCM,data:gWfHLaizDdp3,iv:GKYdizgC/bvtXMrtkqyjD2JTeTC3ZIJlV0HeeEQ5vBU=,tag:WZWwv0hV6yyHbOyfPeYsIA==,type:int]
-    TG_BOT_USER_IDS: ENC[AES256_GCM,data:8ndgTPFsX8Ps,iv:NgLI/MhbIVR7dKL1zhLNnAYNhdAgs+A6HrB6u8Ng9HM=,tag:kET2yQCyaIhuHS/XtUWLgQ==,type:int]
+    TG_BOT_ADMIN_IDS: ENC[AES256_GCM,data:vB3Wun3lAXe1,iv:SLpCrCvlrMj3p6MhEVmTouzjnBN9LXh/ZpuA+zFbo2s=,tag:yD1EeNqdlPZbIQiyATIF9A==,type:str]
+    TG_BOT_USER_IDS: ENC[AES256_GCM,data:N1yrw7f1NE36,iv:MmdWdsXf8scj6kq5w3mn6fMlYRGy4OWpCKXsEdcvUw4=,tag:jcyFgBM0aUP6+FJTbydPbA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -63,8 +63,8 @@ sops:
             QmxYU2FYZ0N2Z29lMTdhZnQyNU9jSUEKyG1YlQGZAqOI2namyYVUzFoW+7O9s5CL
             x/cy3nNdaILNiZtBPL9Zq6qvJSvQ0l+DCiGwEjBosA35m27eVooacw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-03-04T19:49:09Z"
-    mac: ENC[AES256_GCM,data:CPCV/Wt4V2noN4i9sGE/k+SlMg3GK6ENDDGZLx1d8a4y4Whw3MNchQ3542deFfyDLAzlz8ke+oY4cYcZ66rBk7pZ49ltjMZVQAyPyh9jiD2yUYwEgLcUAVtwREHjSZjqyuLLwX/T08iQOcsrNR3T1chyC+dd4iuOkgrHCdrZRX0=,iv:jlmfIGzQ8szV09guBi3nalU+vPh7BPj0IO6ZEAq0n0M=,tag:mEEOhx1Q81hybNWREOjNsQ==,type:str]
+    lastmodified: "2024-03-04T20:21:46Z"
+    mac: ENC[AES256_GCM,data:zx4xAkPmN0DnYPL17ruHkc7Di4S2UsMY7YSqzKpUu1klL4dr8ikwWXigkhNvd+5flaY+vwme1N7l8r2TuuMXE+4Fc/Ea0bd5x0bx3BfZcr1qyRw+ysA/Hf1p0OpButSx2t4EcM6lcIy5qp474x5bPIo7LjMLRV6ml7EwLjxo/do=,iv:7WhD8p3kILnRya8Slci2J+jc3cMTNKzeAyD7VsOKegI=,tag:8UAJpLuBpWQdHwNsCLwXmQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
