--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -47,7 +47,7 @@ stringData:
     GITHUB_TOKEN: ENC[AES256_GCM,data:C3WUuAAv3rn4F79VLX7i9tE9L9cGKjX+gqwfZYKpfkmdjb08oHNPTw==,iv:FBKCEK46VEgD9YNLITnE0kmjAyN9NMH9by7M8lLyR9M=,tag:o7ti0Vaz30CsaLggI9n7rg==,type:str]
     TG_BOT_TOKEN: ENC[AES256_GCM,data:9+Gg/nxrEVGP3NR5ogX8uMsZ44kKjBYQaPtHyDx1nOrhfHkCuWGKuddp8RnE,iv:Y5Q4vZwk3nH/uVI8PoezyWDNUN9X9bb1JfhFIDMGBM4=,tag:/KliLTtPKvTF4lt6ZDCzHQ==,type:str]
     TG_BOT_ADMIN_IDS: ENC[AES256_GCM,data:vB3Wun3lAXe1,iv:SLpCrCvlrMj3p6MhEVmTouzjnBN9LXh/ZpuA+zFbo2s=,tag:yD1EeNqdlPZbIQiyATIF9A==,type:str]
-    TG_BOT_USER_IDS: ENC[AES256_GCM,data:N1yrw7f1NE36,iv:MmdWdsXf8scj6kq5w3mn6fMlYRGy4OWpCKXsEdcvUw4=,tag:jcyFgBM0aUP6+FJTbydPbA==,type:str]
+    TG_BOT_USER_IDS: ENC[AES256_GCM,data:jkeUwCAo0WNV,iv:cDSS96O0wDL7DjB5p2Yv7i4gcDFTtq5wZysiWxXUyIg=,tag:c49hh2fMrGY7qkocaCZRfw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -63,8 +63,8 @@ sops:
             QmxYU2FYZ0N2Z29lMTdhZnQyNU9jSUEKyG1YlQGZAqOI2namyYVUzFoW+7O9s5CL
             x/cy3nNdaILNiZtBPL9Zq6qvJSvQ0l+DCiGwEjBosA35m27eVooacw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-03-04T20:21:46Z"
-    mac: ENC[AES256_GCM,data:zx4xAkPmN0DnYPL17ruHkc7Di4S2UsMY7YSqzKpUu1klL4dr8ikwWXigkhNvd+5flaY+vwme1N7l8r2TuuMXE+4Fc/Ea0bd5x0bx3BfZcr1qyRw+ysA/Hf1p0OpButSx2t4EcM6lcIy5qp474x5bPIo7LjMLRV6ml7EwLjxo/do=,iv:7WhD8p3kILnRya8Slci2J+jc3cMTNKzeAyD7VsOKegI=,tag:8UAJpLuBpWQdHwNsCLwXmQ==,type:str]
+    lastmodified: "2024-03-04T20:27:23Z"
+    mac: ENC[AES256_GCM,data:nbTtaRqTsjO8ZAgACJjxT9rz2d6cCguM2NyNoiqzeAnBrCakUmsD5Le0Va+Jvc6hQxa/cAiOvcwpoF4VtVEOLWkHQ1yurQO0TtvfNM09w7bJef9ysiwc/I3zz/d+N3FH7vAWB8qdepOWMLGofUhKWuCGKf6DuAF5CvHr/Rn6arU=,iv:sSECpfd0/xXcu/bMmhO2JJQ2skpTk/rz7T8pRgbGyQ4=,tag:NE9g71c4bg28tScHlMaAmw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
