--- a/kubernetes/apps/ai/ollama/backend/secret.sops.yaml
+++ b/kubernetes/apps/ai/ollama/backend/secret.sops.yaml
@@ -1,9 +1,28 @@
----
 apiVersion: v1
 kind: Secret
 metadata:
     name: ollama-secret
 stringData:
-    TG_BOT_TOKEN: ${TG_BOT_TOKEN}
-    TG_ADMIN_IDS: ${TG_BOT_ADMIN_IDS}
-    TG_USER_IDS: ${TG_BOT_USER_IDS}
+    TG_BOT_TOKEN: ENC[AES256_GCM,data:Hkt5gU/L0TT70GewmsTAXFr1tHp8c+8NTQypRVxKOnQ5C9IMJbrHXxaZgBVB,iv:iwnnE8wH9bl1d8iwLCLuf5vXlMpvEhWjPhUMN8lqClE=,tag:es1RQovyN6M/LMmoRT5iEQ==,type:str]
+    TG_ADMIN_IDS: ENC[AES256_GCM,data:L3uFSYM1GXwN,iv:vTIKVy1zzaJegHDvMb7L6SPu8bsnnanzi8a0Ii3qSIo=,tag:IFR0+JtfXTwBbgJj7ZAB9w==,type:str]
+    TG_USER_IDS: ENC[AES256_GCM,data:vJ4YyMP03B5X,iv:9MlkX9x10KhO//ZoTO/SCDG/Vc+XKevBqlCRasPS3E0=,tag:8hSoVg5sOVG5f+V5USGKmQ==,type:str]
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age1rzxy9s9prfhu2ceqrt9hexs3tl402d7j2haumxl0lpn2pfycle6sz5kefj
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4RW0wb2p3Y1k2dllib0x3
+            SVRYa3BzMWkvbWdTUndwY0tWN2xMWEVPaG1FCmc0UWdOa0VNM1EyQ3ZJV1pjZnZV
+            Y21UNDd4bVIwczNyaVVYREJncnBFZ1UKLS0tICtqSEEvUlBrcVFsMUpEMzQ3YWUv
+            MGt5K21SRjNrNnZwTmJSUERHM2ZNczAKsXPIyeU1aT42NhZAmWwr2OWZLVMQKVVs
+            jfs8BzPXoIayuNhxXb7DDNSGej8GiceCmScnnX/9qEhQjqznFj8gmA==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-03-04T20:36:56Z"
+    mac: ENC[AES256_GCM,data:LfWR1BeHTI5AhkUE6e2a8G6bk4jVOD4leUhSQ6WGW4dVHEO/kGw+0zVKaz/r4D5o2NcabSNluH+8Seg1EE5jtqBZSXnPGrFg/wdN5ub1krZW+MyuLYwoM1Or7HSmV8EH/oIzoXVJDBUVLCcgBMJ+YUVJ4HPZgDeDUzIDqoSHi5o=,iv:TDP56PqDIG9yRLOMoItW+Azfes1B8QKwnWIT8EmMZZ0=,tag:/YUO+dyshPkA8iSUO9rAwA==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.8.1
