--- a/kubernetes/apps/ai/ollama/backend/secret.sops.yaml
+++ b/kubernetes/apps/ai/ollama/backend/secret.sops.yaml
@@ -5,7 +5,7 @@ metadata:
 stringData:
     TG_BOT_TOKEN: ENC[AES256_GCM,data:jgsjhi405zGKSAiT6306byTpypOiqPk6+7UrD7gONc4vMFf5H+Wb4WCRLbR7,iv:jd4EhuZT6AP5lvbE+u9SYeymMU3Qk526Xc5QnfJYvds=,tag:dc8JVxY4d1froCg/2Dg2Lw==,type:str]
     TG_ADMIN_IDS: ENC[AES256_GCM,data:L3uFSYM1GXwN,iv:vTIKVy1zzaJegHDvMb7L6SPu8bsnnanzi8a0Ii3qSIo=,tag:IFR0+JtfXTwBbgJj7ZAB9w==,type:str]
-    TG_USER_IDS: ENC[AES256_GCM,data:vJ4YyMP03B5X,iv:9MlkX9x10KhO//ZoTO/SCDG/Vc+XKevBqlCRasPS3E0=,tag:8hSoVg5sOVG5f+V5USGKmQ==,type:str]
+    TG_USER_IDS: ENC[AES256_GCM,data:whjxM4pSy+vO,iv:vAL1XNNlrWHAEjCd9XlyG7xoNEAdnvTCJbpB5Uzbd1o=,tag:N7ehGyf0PlnH0eRT9dgsdA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +21,8 @@ sops:
             MGt5K21SRjNrNnZwTmJSUERHM2ZNczAKsXPIyeU1aT42NhZAmWwr2OWZLVMQKVVs
             jfs8BzPXoIayuNhxXb7DDNSGej8GiceCmScnnX/9qEhQjqznFj8gmA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-03-04T20:50:00Z"
-    mac: ENC[AES256_GCM,data:RuU1R4bdXjM+q6yNL4tvXoSIQaUGp3nq5jzyfGH8xWq7twvYYQEt8ylpfYQKw43Db24UzKjKrU09Fq+0MYFpAjhwLMwan/0I7e2EyvQWBl+rsbOrBS2YW6QoYU4L2FP+sc6A/c0o0gS11yqnDcoZf5jEpv0LO3VTsHwia3G+e6Y=,iv:MPjh1QFFOMTnnwVte6/jYnrtZYxoiVgkd/5R8h3b4ms=,tag:NJSnd09smMjXtzOFWZG3PQ==,type:str]
+    lastmodified: "2024-03-04T21:24:30Z"
+    mac: ENC[AES256_GCM,data:EJ+StSoFTN2PmeVWU279swftQzoMCVKe9AZ+d6RBaKybMRdIFbhM8t39djyUIIgcHhCp2WVj5jPOYMI2FUgieYjux4SQWZA5Sm/lF2bnuv1Auv+XEh1y13tqg2u1xzK/H0AVX2ynuiryB0mrL6LFqqwacKb9S1QZ1BiXvLuQ3Cg=,iv:GT5COQxi5JLXLVbuC9Vc5edI/SA/mvZnUmrbHzx2Vf0=,tag:+RXim0GnDbxh6d9Uc57sKA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
