--- a/kubernetes/apps/ai/ollama/backend/helmrelease.yaml
+++ b/kubernetes/apps/ai/ollama/backend/helmrelease.yaml
@@ -62,26 +62,26 @@ spec:
         containers:
           main:
             image:
-              repository: ruecat/ollama-telegram
+              repository: n4z3m/dialoqbase
               tag: latest
             env:
               TZ: Europe/Simferopol
-              TOKEN:
+              DATABASE_URL:
                 valueFrom:
                   secretKeyRef:
                     name: ollama-secret
-                    key: TG_BOT_TOKEN
-              ADMIN_IDS:
+                    key: PGSTRING
+              DB_REDIS_URL: redis://redis.database.svc.cluster.local:6379
+              DB_SECRET_KEY:
                 valueFrom:
                   secretKeyRef:
                     name: ollama-secret
-                    key: TG_ADMIN_IDS
-              USER_IDS:
+                    key: DBSECRETKEY
+              DB_SESSION_SECRET:
                 valueFrom:
                   secretKeyRef:
                     name: ollama-secret
-                    key: TG_USER_IDS
-              OLLAMA_BASE_URL: ollama.ai.svc.cluster.local
+                    key: DB_SECRET_KEY
             resources:
               requests:
                 cpu: 200m
@@ -92,7 +92,11 @@ spec:
       main:
         ports:
           http:
-            port: &port 11434
+            port: 11434
+      bot:
+        ports:
+          http:
+            port: 3000
     ingress:
       main:
         enabled: true
@@ -104,9 +108,16 @@ spec:
                 service:
                   name: main
                   port: http
+          - host: &host2 "dia.${SECRET_DOMAIN}"
+            paths:
+              - path: /
+                service:
+                  name: bot
+                  port: http
         tls:
           - hosts:
               - *host
+              - *host2
             secretName: wildcard-cert-tls
     persistence:
       models:
