--- a/kubernetes/apps/ai/ollama/backend/secret.sops.yaml
+++ b/kubernetes/apps/ai/ollama/backend/secret.sops.yaml
@@ -4,8 +4,9 @@ metadata:
     name: ollama-secret
 stringData:
     TG_BOT_TOKEN: ENC[AES256_GCM,data:jgsjhi405zGKSAiT6306byTpypOiqPk6+7UrD7gONc4vMFf5H+Wb4WCRLbR7,iv:jd4EhuZT6AP5lvbE+u9SYeymMU3Qk526Xc5QnfJYvds=,tag:dc8JVxY4d1froCg/2Dg2Lw==,type:str]
-    TG_ADMIN_IDS: ENC[AES256_GCM,data:L3uFSYM1GXwN,iv:vTIKVy1zzaJegHDvMb7L6SPu8bsnnanzi8a0Ii3qSIo=,tag:IFR0+JtfXTwBbgJj7ZAB9w==,type:str]
-    TG_USER_IDS: ENC[AES256_GCM,data:whjxM4pSy+vO,iv:vAL1XNNlrWHAEjCd9XlyG7xoNEAdnvTCJbpB5Uzbd1o=,tag:N7ehGyf0PlnH0eRT9dgsdA==,type:str]
+    PGSTRING: ENC[AES256_GCM,data:5vEGDCRvMpNAIsJjUZCX8pRh2xr5Abumh2yzZ0s08piEdTtCsL/s67LYWG/TyhiemxKykqGMWFk9plHRMNFtAdDy77pZ//YO95s2BghbKnTQEw1We7V/sMLl3mem+sqodgq5REMcmykH2S04gIIBalL8FjKke6tqwszDZVgA90Tn,iv:P770FY+N52RmYMuRStlo86wmzKdUThylQKHtOxuJhr0=,tag:L2zTGcdHNiipFewEbihUWA==,type:str]
+    DBSECRETKEY: ENC[AES256_GCM,data:DAIeAY9XjxWzNJjMHB1U7av9iw==,iv:AWcG9itqlr4nDwkN5dq21e5+he7SGzkOY/16PbMMAcw=,tag:shMIeLLfcybqx2tUCF5fWQ==,type:str]
+    DB_SESSION_SECRET: ENC[AES256_GCM,data:L4iQghhEjodMt5yYuW/ErJru805FDvvBk5RZ9urJVtNeCMEGtQfJ2usGh2g=,iv:46qgIvaJX9sVtqT4g0ChlmTyyksnxwAaiUPsbmbvTOw=,tag:E+/Ga1YEXzjjr+A8Wkbzdw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +22,8 @@ sops:
             MGt5K21SRjNrNnZwTmJSUERHM2ZNczAKsXPIyeU1aT42NhZAmWwr2OWZLVMQKVVs
             jfs8BzPXoIayuNhxXb7DDNSGej8GiceCmScnnX/9qEhQjqznFj8gmA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-03-04T21:24:30Z"
-    mac: ENC[AES256_GCM,data:EJ+StSoFTN2PmeVWU279swftQzoMCVKe9AZ+d6RBaKybMRdIFbhM8t39djyUIIgcHhCp2WVj5jPOYMI2FUgieYjux4SQWZA5Sm/lF2bnuv1Auv+XEh1y13tqg2u1xzK/H0AVX2ynuiryB0mrL6LFqqwacKb9S1QZ1BiXvLuQ3Cg=,iv:GT5COQxi5JLXLVbuC9Vc5edI/SA/mvZnUmrbHzx2Vf0=,tag:+RXim0GnDbxh6d9Uc57sKA==,type:str]
+    lastmodified: "2024-03-04T21:46:04Z"
+    mac: ENC[AES256_GCM,data:HB48+DiMfb84V4pq/NysHExdAe8U7QpoLBfbFb1OzWiC8fbKe40az79ZV2+uDeTLEtiI/94qXTrc01Lc+9zlJzXhcg7r5i4fvlIOklPfVfC5UP0JY+cCacJEjcyssayROBKeDp8zy9MectzZH+ztgRAUDN1GIAEuAjkjmT5u36o=,iv:xOhxjSbPEqzaY4ZJXRr4Odp/kkzyYoUUeP8UZNKAmXA=,tag:Cr4ERXqVjfWliGZ28sOC6w==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
