--- a/kubernetes/flux/repositories/oci/kustomization.yaml
+++ b/kubernetes/flux/repositories/oci/kustomization.yaml
@@ -1,4 +1,8 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-resources: []
+resources:
+  - repos/bitnami.yaml
+  - repos/prometheus-community.yaml
+  - repos/weaveworks.yaml
+  - repos/xenitab.yaml
