--- a/kubernetes/apps/media/recyclarr/ks.yaml
+++ b/kubernetes/apps/media/recyclarr/ks.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cluster-apps-recyclarr
+  name: recyclarr
   namespace: flux-system
 spec:
   targetNamespace: media
@@ -14,7 +14,7 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: k8s-gitops
+    name: home-kubernetes
   wait: true
   interval: 30m
   retryInterval: 1m
