--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -15,5 +15,5 @@ resources:
   - ./sftpgo/ks.yaml
   - ./jellyfin/ks.yaml
   - ./recyclarr/ks.yaml
-  - ./mainteinerr/ks.yaml
+  - ./maintainerr/ks.yaml
   - ./jellyseerr/ks.yaml
