--- a/kubernetes/apps/media/recyclarr/app/configs/recyclarr.yml
+++ b/kubernetes/apps/media/recyclarr/app/configs/recyclarr.yml
@@ -14,6 +14,7 @@ sonarr:
       - name: Tuned-UHD
         min_format_score: 0
         qualities:
+          - name: Tuned-UHD
           - name: Blueray-2160p
             qualities:
               - WEBDL-2160p
@@ -38,7 +39,7 @@ sonarr:
           enabled: true
         upgrade:
           allowed: true
-          until_quality: Bluray-1080p
+          until_quality: Tuned-UHD
           until_score: 999999999
 
     custom_formats:
@@ -164,6 +165,7 @@ radarr:
       - name: Tuned-UHD
         min_format_score: 0
         qualities:
+          - name: Tuned-UHD
           - name: Blueray-2160p
             qualities:
               - WEBDL-2160p
