--- a/kubernetes/apps/media/recyclarr/app/configs/recyclarr.yml
+++ b/kubernetes/apps/media/recyclarr/app/configs/recyclarr.yml
@@ -22,6 +22,7 @@ sonarr:
           - name: Bluray-2160p
           - name: Bluray-2160p Remux
           - name: Bluray-1080p
+          - name: Bluray-1080p Remux
           - name: WEB 1080p
             qualities:
               - WEBRip-1080p
@@ -93,6 +94,7 @@ sonarr:
           - 85c61753df5da1fb2aab6f2a47426b09 # BR-DISK
           - 9c11cd3f07101cdba90a2d81cf0e56b4 # LQ
           - 47435ece6b99a0b477caf360e79ba0bb # x265 (HD)
+          - fbcb31d8dabd2a319072b84fc0b7249c # Extras
         quality_profiles:
           - name: Tuned-UHD
 
@@ -107,25 +109,27 @@ sonarr:
 
       # Streaming Services
       - trash_ids:
-          - d660701077794679fd59e8bdf4ce3a29 # AMZN
-          - f67c9ca88f463a48346062e8ad07713f # ATVP
-          - 36b72f59f4ea20aad9316f475f2d9fbb # DCU
-          - 89358767a60cc28783cdc3d0be9388a4 # DSNP
-          - a880d6abc21e7c16884f3ae393f84179 # HMAX
-          - 7a235133c87f7da4c8cccceca7e3c7a6 # HBO
-          - f6cce30f1733d5c8194222a7507909bb # HULU
-          - b2b980877494b560443631eb1f473867 # NLZ
-          - d34870697c9db575f17700212167be23 # NF
-          - c67a75ae4a1715f2bb4d492755ba4195 # PMTP
-          - 1656adc6d7bb2c8cca6acfb6592db421 # PCOK
-          - 3ac5d84fce98bab1b531393e9c82f467 # QIBI
-          - ae58039e1319178e6be73caab5c42166 # SHO
-          - 5d2317d99af813b6529c7ebf01c83533 # VDL
-          - c30d2958827d1867c73318a5a2957eb1 # RED
-          - 0ac24a2a68a9700bcb7eeca8e5cd644c # iT
-          - f27d46a831e6b16fa3fee2c4e5d10984 # CANAL+
-          - 0455d6519a550dbf648c97b56e7231d2 # SALTO
-          - b0d6195c23ae254932da00512db7e8a8 # RTBF
+          - d660701077794679fd59e8bdf4ce3a29  # AMZN
+          - f67c9ca88f463a48346062e8ad07713f  # ATVP
+          - 4e9a630db98d5391aec1368a0256e2fe  # CRAV
+          - 36b72f59f4ea20aad9316f475f2d9fbb  # DCU
+          - 89358767a60cc28783cdc3d0be9388a4  # DSNP
+          - 7a235133c87f7da4c8cccceca7e3c7a6  # HBO
+          - a880d6abc21e7c16884f3ae393f84179  # HMAX
+          - f6cce30f1733d5c8194222a7507909bb  # HULU
+          - 0ac24a2a68a9700bcb7eeca8e5cd644c  # iT
+          - 81d1fbf600e2540cee87f3a23f9d3c1c  # MAX
+          - d34870697c9db575f17700212167be23  # NF
+          - b2b980877494b560443631eb1f473867  # NLZ
+          - fb1a91cdc0f26f7ca0696e0e95274645  # OViD
+          - 1656adc6d7bb2c8cca6acfb6592db421  # PCOK
+          - c67a75ae4a1715f2bb4d492755ba4195  # PMTP
+          - 3ac5d84fce98bab1b531393e9c82f467  # QIBI
+          - c30d2958827d1867c73318a5a2957eb1  # RED
+          - ae58039e1319178e6be73caab5c42166  # SHO
+          - 1efe8da11bfd74fbbcd4d8117ddb9213  # STAN
+          - 5d2317d99af813b6529c7ebf01c83533  # VDL
+          - 77a7b25585c18af08f60b1547bb9b4fb  # CC
         quality_profiles:
           - name: Tuned-UHD
 
@@ -173,6 +177,7 @@ radarr:
           - name: Bluray-2160p Remux
           - name: Remux-1080p
           - name: Bluray-1080p
+          - name: Bluray-1080p Remux
           - name: WEB 1080p
             qualities:
               - WEBRip-1080p
@@ -235,6 +240,7 @@ radarr:
       - trash_ids:
           - 0f12c086e289cf966fa5948eac571f44 # Hybrid
           - 570bc9ebecd92723d2d21500f4be314c # Remaster
+          - eca37840c13c6ef2dd0262b141a5482f # 4K Remaster
           - 957d0f44b592285f26449575e8b1167e # Special Edition
           - e0c07d59beb37348e975a930d5e50319 # Criterion Collection
           - 9d27d9d2181838f76dee150882bdc58c # Masters of Cinema
@@ -251,6 +257,7 @@ radarr:
           - 90a6f9a284dff5103f6346090e6280c8 # LQ
           - b8cd450cbfa689c0259a01d9e29ba3d6 # 3D
           - dc98083864ea246d05a42df0d05f81cc # x265 (HD)
+          - b8cd450cbfa689c0259a01d9e29ba3d6 # 3D
         quality_profiles:
           - name: Tuned-UHD
 
